Fixed the description in composer.json to reflect English instead of French.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "gessyken/laravel-test-accelerator",
-    "description": "Un package Laravel puissant pour accélérer le processus de développement et de test de vos applications",
+    "description": "A powerful Laravel package to accelerate the development and testing process of your applications",
     "keywords": [
         "gessyken",
         "laravel",
